v1.7.2 - Fixed sizing issues for responsive chat List and overflow

--- a/client/src/Components/Chat_Box/Chat_Box.module.css
+++ b/client/src/Components/Chat_Box/Chat_Box.module.css
@@ -53,7 +53,7 @@
 .user_input{
     width: 80%;
     height: 60%;
-
+    outline: 0;
     border: 1px solid black;
     border-radius: 20px;
     padding: 0 15px;
