--- a/client/src/Components/Chat_List/ChatList.module.css
+++ b/client/src/Components/Chat_List/ChatList.module.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     align-items: center;
 
+    overflow: auto;
     box-sizing: border-box;
 }
 
@@ -20,7 +21,7 @@
 }
 
 .header h1{
-    margin: 20px -10px;
+    margin: 20px 0;
     font-family: var(--font-family-head);
     font-size: 2rem;
 }
@@ -55,9 +56,13 @@
 
 /* FRIEND LIST */
 .friend_container{
-    width: 95%;
+    width: 88%;
     height: 10%;
+    min-height: 70px;
+    max-height: 80px;
     padding: 0 20px;
+
+    border-bottom: 1px solid rgb(0, 0, 0);
 
     display: flex;
     flex-direction: column;
@@ -66,6 +71,7 @@
     box-sizing: border-box;
     transition: 0.5s ease;
 }
+
 .friend_container:hover{
     background-color: rgba(174, 225, 240, 0.518);
     border: 1px solid black;
